--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
+    "swiper": "^10.0.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
