--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconfu/svg-inject": "^1.2.3",
     "bootstrap-icons": "^1.10.5",
     "swiper": "^10.0.4",
     "vue": "^3.3.4"
